--- a/open-url-in-devonthink/Makefile
+++ b/open-url-in-devonthink/Makefile
@@ -1,10 +1,10 @@
 # =============================================================================
 # @file    Makefile
 # @brief   Trivial makefile for compiling AppleScript
-# @author  Michael Hucka
-# @date    2020-11-13
+# @author  Emenike Nathaniel
+# @date    2023-06-4
 # @license Please see the file named LICENSE in the project directory
-# @website https://github.com/mhucka/devonthink-hacks
+# @website https://github.com/Githubnath/personal_management_system_
 # =============================================================================
 
 sources = $(shell find . -iname '*.applescript' | sed 's/ /\\ /g')
