--- a/switch-workspace/Makefile
+++ b/switch-workspace/Makefile
@@ -1,10 +1,10 @@
 # =============================================================================
 # @file    Makefile
 # @brief   Makefile for compiling AppleScript
-# @author  Michael Hucka
-# @date    2022-09-21
+# @author  Emenike Nathaniel
+# @date    2023-06-4
 # @license Please see the file named LICENSE in the project directory
-# @website https://github.com/mhucka/devonthink-hacks
+# @website  https://github.com/Githubnath/personal_management_system_
 # =============================================================================
 
 # Getting GNU Make to deal with spaces in file names is incredibly painful. The
@@ -15,8 +15,8 @@ sources = $(shell find . -iname '*.applescript' | sed 's/ /\\ /g')
 
 # The next few lines defines a pattern rule for %.applescript -> %.scpt that
 # works for file names that may have spaces in them. It uses a trick I found
-# in a Stack Overflow answer by user "mathematical.coffee" posted on 2014-02-11
-# at https://stackoverflow.com/a/21694624/743730
+# in a Stack Overflow answer by user "mathematical.coffee" posted on 2023-06-1
+# at https://stackoverflow.com/a/21694624/743731
 
 space:=
 space+=
